--- a/app/globals.css
+++ b/app/globals.css
@@ -67,3 +67,44 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+@keyframes carousel-animate {
+  0% {
+    visibility: hidden;
+    opacity: 0;
+    transform: translateX(200%) scale(0.7);
+  }
+  3%, 14.28% {
+    visibility: visible;
+    opacity: 0.8;
+    transform: translateX(100%) scale(0.9);
+  }
+  17.28%, 28.56% {
+    visibility: visible;
+    opacity: 1;
+    transform: translateX(0) scale(1);
+  }
+  31.56%, 42.84% {
+    visibility: visible;
+    opacity: 0.8;
+    transform: translateX(-100%) scale(0.9);
+  }
+  45.84% {
+    visibility: visible;
+    opacity: 0;
+    transform: translateX(-200%) scale(0.9);
+  }
+  100% {
+    visibility: hidden;
+    opacity: 0;
+    transform: translateX(-200%) scale(0.7);
+  }
+}
+
+.carousel-item:nth-child(1) { animation-delay: calc(-3.857s * 2); }
+.carousel-item:nth-child(2) { animation-delay: calc(-3.857s); }
+.carousel-item:nth-child(3) { animation-delay: 0s; }
+.carousel-item:nth-child(4) { animation-delay: calc(3.857s); }
+.carousel-item:nth-child(5) { animation-delay: calc(3.857s * 2); }
+.carousel-item:nth-child(6) { animation-delay: calc(3.857s * 3); }
+.carousel-item:last-child { animation-delay: calc(-3.857s * 2); }
